--- a/src/app_fxml.fxml
+++ b/src/app_fxml.fxml
@@ -1,8 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane prefWidth="200.0">
+         <children>
+            <Label layoutX="10.0" layoutY="10.0" text="รหัสสินค้า">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField id="itemIDTf" layoutX="103.0" layoutY="11.0" prefWidth="150.0" />
+            <Label layoutX="278.0" layoutY="12.0" text="ชื่อสินค้า">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField id="itemNameTf" layoutX="354.0" layoutY="10.0" prefWidth="200.0" />
+            <Label layoutX="579.0" layoutY="12.0" text="หมวดหมู่">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ComboBox id="itemCategoryCb" layoutX="656.0" layoutY="10.0" prefWidth="200.0" />
+            <Label layoutX="873.0" layoutY="10.0" text="หมวดหมู่ย่อย">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ComboBox id="itemSubCategoryCB" layoutX="978.0" layoutY="10.0" prefWidth="200.0" />
+            <Button id="clearBtn" layoutX="1078.0" layoutY="49.0" mnemonicParsing="false" prefWidth="100.0" text="ล้าง" />
+         </children>
+         <opaqueInsets>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </opaqueInsets>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </Pane>
+   </children>
+</VBox>
