--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -7,19 +7,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController.ItemOutController">
    <children>
       <Pane prefWidth="200.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="ชื่อลูกค้า/บริษัท">
+            <Label layoutX="14.0" layoutY="11.0" text="ชื่อลูกค้า/บริษัท">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="customerNameTf" layoutX="143.0" layoutY="10.0" prefWidth="400.0" />
+            <TextField id="customerNameTf" layoutX="154.0" layoutY="11.0" prefWidth="400.0" />
             <Text layoutX="14.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เลขที่ออกเอกสาร">
                <font>
                   <Font size="20.0" />
@@ -42,16 +42,16 @@
             </Text>
          </children>
       </Pane>
-      <ScrollPane prefHeight="400.0" prefWidth="1200.0">
+      <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="400.0" prefWidth="1200.0">
          <content>
-            <TableView maxHeight="1.7976931348623157E308" minWidth="-Infinity" prefHeight="149.0" prefWidth="1198.0">
+            <TableView id="itemOutTv" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="149.0" prefWidth="1200.0">
               <columns>
                 <TableColumn prefWidth="167.0" text="รหัสสินค้า" />
                 <TableColumn prefWidth="178.0" text="ชื่อสินค้า" />
                   <TableColumn prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
                   <TableColumn prefWidth="241.0" text="ราคาขาย / หน่วย" />
                   <TableColumn prefWidth="168.0" text="จำนวน" />
-                  <TableColumn prefWidth="235.0" text="รวม ( บาท )" />
+                  <TableColumn prefWidth="237.0" text="รวม ( บาท )" />
               </columns>
             </TableView>
          </content>
@@ -77,7 +77,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="747.0" layoutY="14.0" text="ราคา">
+            <Label id="priceLabel" layoutX="747.0" layoutY="14.0" text="ราคา">
                <font>
                   <Font size="20.0" />
                </font>
@@ -101,12 +101,12 @@
                </font>
             </RadioButton>
             <TextField id="discountByAmountBahtTf" layoutX="834.0" layoutY="50.0" prefHeight="31.0" prefWidth="128.0" />
-            <Text layoutX="1016.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
+            <Text layoutX="1132.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <TextField id="discountByPercentAmountTf" layoutX="834.0" layoutY="87.0" prefHeight="31.0" prefWidth="83.0" />
+            <TextField id="discountByPercentTf" layoutX="834.0" layoutY="87.0" prefHeight="31.0" prefWidth="83.0" />
             <Label layoutX="935.0" layoutY="86.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -170,6 +170,11 @@
                   <Font size="20.0" />
                </font>
             </Text>
+            <Label layoutX="849.0" layoutY="14.0" text="บาท">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
