--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -19,13 +19,8 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="customerNameTf" layoutX="154.0" layoutY="11.0" prefWidth="400.0" />
+            <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
             <Text layoutX="14.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เลขที่ออกเอกสาร">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
-            <Text id="billIDLabel" layoutX="170.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เลขที่เอกสาร">
                <font>
                   <Font size="20.0" />
                </font>
@@ -35,11 +30,8 @@
                   <Font size="20.0" />
                </font>
             </Text>
-            <Text id="billDateLabel" layoutX="600.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันที่">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
+            <TextField id="discountByAmountBahtTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
          </children>
       </Pane>
       <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="400.0" prefWidth="1200.0">
@@ -72,22 +64,17 @@
             </Label>
             <TextField id="billDestDirTf" layoutX="161.0" layoutY="101.0" prefHeight="31.0" prefWidth="246.0" />
             <Button layoutX="433.0" layoutY="101.0" mnemonicParsing="false" text="เลือกปลายทาง" />
-            <Label layoutX="628.0" layoutY="15.0" text="ราคา">
+            <Label layoutX="620.0" layoutY="14.0" text="ราคา">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label id="priceLabel" layoutX="747.0" layoutY="14.0" text="ราคา">
+            <Label layoutX="620.0" layoutY="53.0" text="ส่วนลด">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="628.0" layoutY="46.0" text="ส่วนลด">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <RadioButton id="discountByAmountRb" layoutX="697.0" layoutY="46.0" mnemonicParsing="false" style="-fx-padding: 0;" text="หน่วยบาท">
+            <RadioButton id="discountByAmountRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" style="-fx-padding: 0;" text="หน่วยบาท">
                <font>
                   <Font size="20.0" />
                </font>
@@ -95,19 +82,19 @@
                   <ToggleGroup fx:id="discountRG" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton id="discountByPercentRb" layoutX="697.0" layoutY="86.0" mnemonicParsing="false" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
+            <RadioButton id="discountByPercentRb" layoutX="697.0" layoutY="94.0" mnemonicParsing="false" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <TextField id="discountByAmountBahtTf" layoutX="834.0" layoutY="50.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" />
             <Text layoutX="1132.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <TextField id="discountByPercentTf" layoutX="834.0" layoutY="87.0" prefHeight="31.0" prefWidth="83.0" />
-            <Label layoutX="935.0" layoutY="86.0" text="เป็นเงิน">
+            <TextField id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" />
+            <Label layoutX="908.0" layoutY="92.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
                </font>
@@ -117,18 +104,18 @@
                   <Font size="20.0" />
                </font>
             </Text>
-            <Label layoutX="620.0" layoutY="134.0" text="ภาษี ร้อยละ ">
+            <Label layoutX="620.0" layoutY="136.0" text="ภาษี ร้อยละ ">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="vatTf" layoutX="726.0" layoutY="133.0" prefHeight="31.0" prefWidth="83.0" text="7" />
-            <Label layoutX="849.0" layoutY="134.0" text="เป็นเงิน">
+            <TextField id="vatTf" layoutX="808.0" layoutY="136.0" prefHeight="31.0" prefWidth="83.0" text="7" />
+            <Label layoutX="908.0" layoutY="136.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Text layoutX="1067.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
+            <Text layoutX="1132.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
@@ -138,43 +125,28 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label id="netPriceLabel" layoutX="739.0" layoutY="177.0" text="รวมทั้งหมด">
+            <Label layoutX="865.0" layoutY="176.0" text="บาท   กำไร">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="849.0" layoutY="177.0" text="บาท   กำไร">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label id="profitBathLabel" layoutX="961.0" layoutY="177.0" text="กำไร">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Text layoutX="1067.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
+            <Text layoutX="1132.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Text>
-            <Button layoutX="14.0" layoutY="177.0" mnemonicParsing="false" prefWidth="150.0" text="ตกลง" />
+            <Button layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#sellItem" prefWidth="150.0" text="ตกลง" />
             <Button layoutX="189.0" layoutY="176.0" mnemonicParsing="false" prefWidth="150.0" text="ยกเลิก" />
-            <Text id="discountByPercentBathLabel" layoutX="1032.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
-            <Text id="vatBathLabel" layoutX="957.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
-            <Label layoutX="849.0" layoutY="14.0" text="บาท">
+            <Label layoutX="1132.0" layoutY="14.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
+            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
          </children>
       </Pane>
    </children>
