--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -20,18 +20,18 @@
                </font>
             </Label>
             <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
-            <Text layoutX="14.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เลขที่ออกเอกสาร">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
-            <Text layoutX="459.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันที่ออกเอกสาร">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
             <TextField id="discountByAmountBahtTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
             <TextField id="discountByAmountBahtTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
+            <Label layoutX="14.0" layoutY="45.0" text="เลขที่ออกเอกสาร">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="457.0" layoutY="46.0" text="วันที่ออกเอกสาร">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="400.0" prefWidth="1200.0">
