--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -88,22 +88,12 @@
                </font>
             </RadioButton>
             <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" />
-            <Text layoutX="1132.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
             <TextField id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" />
             <Label layoutX="908.0" layoutY="92.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Text layoutX="1132.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
             <Label layoutX="620.0" layoutY="136.0" text="ภาษี ร้อยละ ">
                <font>
                   <Font size="20.0" />
@@ -115,11 +105,6 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Text layoutX="1132.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
             <Label layoutX="620.0" layoutY="177.0" text="รวมทั้งหมด">
                <font>
                   <Font size="20.0" />
@@ -130,11 +115,6 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Text layoutX="1132.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="บาท">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Text>
             <Button layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#sellItem" prefWidth="150.0" text="ตกลง" />
             <Button layoutX="189.0" layoutY="176.0" mnemonicParsing="false" prefWidth="150.0" text="ยกเลิก" />
             <Label layoutX="1132.0" layoutY="14.0" text="บาท">
@@ -147,6 +127,26 @@
             <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
             <TextField id="discountByAmountBahtTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
             <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
+            <Label layoutX="1132.0" layoutY="55.0" text="บาท">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="1132.0" layoutY="94.0" text="บาท">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="1132.0" layoutY="137.0" text="บาท">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="1132.0" layoutY="178.0" text="บาท">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
