--- a/src/alBill.fxml
+++ b/src/alBill.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox prefHeight="100.0" prefWidth="484.0" spacing="50.0">
+      <HBox prefHeight="80.0" prefWidth="484.0" spacing="50.0">
          <children>
             <Label text="วันที่">
                <font>
@@ -23,7 +22,7 @@
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </HBox>
-      <TableView layoutX="14.0" layoutY="86.0" prefHeight="620.0" prefWidth="1170.0">
+      <TableView layoutY="80.0" prefHeight="640.0" prefWidth="1200.0">
         <columns>
           <TableColumn id="taxidTc" prefWidth="146.0" text="เลขที่เอกสาร" />
           <TableColumn id="dateTc" prefWidth="224.0" text="วันที่ออกเอกสาร" />
@@ -33,7 +32,4 @@
         </columns>
       </TableView>
    </children>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
 </Pane>
