--- a/src/customer.fxml
+++ b/src/customer.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane>
+      <Pane prefHeight="80.0">
          <children>
             <Label layoutX="28.0" layoutY="25.0" text="ชื่อลูกค้า/บริษัท">
                <font>
@@ -24,11 +23,11 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Pane>
-      <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" prefHeight="649.0" prefWidth="1200.0">
+      <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" prefHeight="640.0" prefWidth="1200.0">
          <content>
             <Pane>
                <children>
-                  <TableView prefHeight="647.0" prefWidth="1200.0">
+                  <TableView layoutX="-1.0" prefHeight="640.0" prefWidth="1200.0">
                     <columns>
                       <TableColumn prefWidth="138.0" text="รหัสลูกค้า" />
                       <TableColumn prefWidth="242.0" text="ชื่อลูกค้า/บริษัท" />
