--- a/src/warehouse.fxml
+++ b/src/warehouse.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <VBox id="contentRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: #f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane id="headerHolder" prefWidth="200.0">
+      <Pane id="headerHolder" prefHeight="100.0" prefWidth="200.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="รหัสสินค้า">
                <font>
@@ -42,5 +41,18 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Pane>
+      <TableView prefHeight="620.0" prefWidth="1200.0">
+        <columns>
+          <TableColumn prefWidth="155.0" text="รูป" />
+          <TableColumn prefWidth="83.0" text="รหัสสินค้า" />
+            <TableColumn prefWidth="175.0" text="ชื่อสินค้า" />
+            <TableColumn prefWidth="74.0" text="หน่วย" />
+            <TableColumn prefWidth="67.0" text="จำนวน" />
+            <TableColumn prefWidth="104.0" text="ราคา/หน่วย" />
+            <TableColumn prefWidth="189.0" text="หมวดหมู่" />
+            <TableColumn prefWidth="124.0" text="หมวดหมู่ย่อย" />
+            <TableColumn minWidth="0.0" prefWidth="228.0" text="หมายเหตุ" />
+        </columns>
+      </TableView>
    </children>
 </VBox>
