--- a/src/warehouse.fxml
+++ b/src/warehouse.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox id="contentRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: #f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="contentRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: #f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController.WarehouseController">
    <children>
       <Pane id="headerHolder" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -16,32 +16,33 @@
                   <Font name="SansSerif Regular" size="20.0" />
                </font>
             </Label>
-            <TextField id="itemIDTF" layoutX="100.0" layoutY="10.0" prefHeight="30.0" prefWidth="150.0" />
+            <TextField id="itemIDTF" fx:id="itemIdTf" layoutX="100.0" layoutY="10.0" prefHeight="30.0" prefWidth="150.0" />
             <Label layoutX="268.0" layoutY="11.0" text="ชื่อสินค้า">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="itemNameTF" layoutX="350.0" layoutY="11.0" prefHeight="30.0" prefWidth="200.0" />
+            <TextField id="itemNameTF" fx:id="itemNameTf" layoutX="350.0" layoutY="11.0" prefHeight="30.0" prefWidth="200.0" />
             <Label layoutX="567.0" layoutY="12.0" text="หมวดหมู่">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <ComboBox id="categoryCB" layoutX="645.0" layoutY="11.0" prefWidth="200.0" />
+            <ComboBox id="categoryCB" fx:id="categoryCb" layoutX="645.0" layoutY="11.0" onAction="#createSubCategory" prefWidth="200.0" />
             <Label layoutX="871.0" layoutY="11.0" text="หมวดหมู่ย่อย">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <ComboBox id="subCategoryCB" layoutX="986.0" layoutY="11.0" prefWidth="200.0" />
-            <Button id="clearBtn" layoutX="1106.0" layoutY="51.0" mnemonicParsing="false" prefWidth="80.0" text="ล้าง" />
+            <ComboBox id="subCategoryCB" fx:id="subCategoryCb" layoutX="986.0" layoutY="11.0" prefWidth="200.0" />
+            <Button id="clearBtn" fx:id="clearBtn" layoutX="1076.0" layoutY="51.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="31.0" prefWidth="110.0" text="ล้าง" />
+            <Button fx:id="searchBtn" layoutX="10.0" layoutY="51.0" mnemonicParsing="false" onAction="#searchData" prefHeight="31.0" prefWidth="156.0" text="ค้นหา" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Pane>
-      <TableView prefHeight="620.0" prefWidth="1200.0">
+      <TableView fx:id="table" prefHeight="620.0" prefWidth="1200.0">
         <columns>
           <TableColumn prefWidth="155.0" text="รูป" />
           <TableColumn prefWidth="83.0" text="รหัสสินค้า" />
