--- a/src/itemIn.fxml
+++ b/src/itemIn.fxml
@@ -10,9 +10,12 @@
 
 <Pane prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController.ItemInController">
    <children>
-      <VBox layoutY="7.0" prefHeight="713.0" prefWidth="200.0" spacing="29.0">
+      <VBox prefHeight="713.0" prefWidth="200.0" spacing="31.0">
          <children>
-            <Label text="ชื่อสินค้า" />
+            <Label text="ชื่อสินค้า">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
             <Label text="รหัสสินค้า">
                <font>
                   <Font size="20.0" />
@@ -84,12 +87,12 @@
             </Label>
          </children>
          <padding>
-            <Insets left="20.0" top="30.0" />
+            <Insets left="20.0" top="20.0" />
          </padding>
       </VBox>
       <VBox layoutX="200.0" prefHeight="465.0" prefWidth="300.0" spacing="20.0">
          <padding>
-            <Insets left="10.0" top="30.0" />
+            <Insets left="10.0" top="20.0" />
          </padding>
          <children>
             <TextField fx:id="itemNameTf" minHeight="30.0" prefHeight="30.0" />
@@ -113,14 +116,14 @@
             </HBox>
          </children>
       </VBox>
-      <TextArea fx:id="noteTa" layoutX="200.0" layoutY="486.0" prefHeight="170.0" prefWidth="665.0" />
+      <TextArea fx:id="noteTa" layoutX="208.0" layoutY="470.0" prefHeight="170.0" prefWidth="665.0" />
       <Button fx:id="addImageBtn" layoutX="865.0" layoutY="345.0" mnemonicParsing="false" onAction="#pickImage" prefHeight="30.0" prefWidth="100.0" text="เพิ่มรูปภาพ" />
-      <Button fx:id="acceptBtn" layoutX="909.0" layoutY="432.0" mnemonicParsing="false" onAction="#validateUserInput" prefHeight="139.0" prefWidth="248.0" text="ยืนยัน">
+      <Button fx:id="acceptBtn" layoutX="909.0" layoutY="470.0" mnemonicParsing="false" onAction="#validateUserInput" prefHeight="115.0" prefWidth="248.0" text="ยืนยัน">
          <font>
             <Font size="30.0" />
          </font>
       </Button>
-      <Button fx:id="deniedBtn" layoutX="909.0" layoutY="614.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="42.0" prefWidth="248.0" text="ยกเลิก" />
+      <Button fx:id="deniedBtn" layoutX="909.0" layoutY="600.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="40.0" prefWidth="248.0" text="ยกเลิก" />
       <StackPane layoutX="704.0" layoutY="53.0" maxHeight="255.0" maxWidth="410.0" prefHeight="255.0" prefWidth="410.0" style="-fx-alignment: CENTER;">
          <children>
             <ImageView fx:id="showImageIv" fitHeight="255.0" fitWidth="410.0" pickOnBounds="true" preserveRatio="true" />
