--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -20,8 +20,8 @@
                </font>
             </Label>
             <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
             <Label layoutX="14.0" layoutY="45.0" text="เลขที่ออกเอกสาร">
                <font>
                   <Font size="20.0" />
@@ -34,20 +34,16 @@
             </Label>
          </children>
       </Pane>
-      <ScrollPane id="tableHolder" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="400.0" prefWidth="1200.0">
-         <content>
-            <TableView id="itemOutTv" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="149.0" prefWidth="1200.0">
-              <columns>
-                <TableColumn prefWidth="167.0" text="รหัสสินค้า" />
-                <TableColumn prefWidth="178.0" text="ชื่อสินค้า" />
-                  <TableColumn prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
-                  <TableColumn prefWidth="241.0" text="ราคาขาย / หน่วย" />
-                  <TableColumn prefWidth="168.0" text="จำนวน" />
-                  <TableColumn prefWidth="237.0" text="รวม ( บาท )" />
-              </columns>
-            </TableView>
-         </content>
-      </ScrollPane>
+      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="1200.0">
+        <columns>
+          <TableColumn prefWidth="167.0" text="รหัสสินค้า" />
+          <TableColumn prefWidth="178.0" text="ชื่อสินค้า" />
+            <TableColumn prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
+            <TableColumn prefWidth="241.0" text="ราคาขาย / หน่วย" />
+            <TableColumn prefWidth="168.0" text="จำนวน" />
+            <TableColumn prefWidth="237.0" text="รวม ( บาท )" />
+        </columns>
+      </TableView>
       <Pane prefHeight="233.0" prefWidth="1200.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="หมายเหตุ">
@@ -55,15 +51,15 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="noteTf" layoutX="102.0" layoutY="14.0" prefHeight="31.0" prefWidth="433.0" />
-            <Button layoutX="14.0" layoutY="61.0" mnemonicParsing="false" prefWidth="200.0" text="ดูตัวอย่างใบเสร็จ" />
+            <TextField id="noteTf" fx:id="noteTf" layoutX="102.0" layoutY="14.0" prefHeight="31.0" prefWidth="433.0" />
+            <Button fx:id="viewBillBtn" layoutX="14.0" layoutY="61.0" mnemonicParsing="false" prefWidth="200.0" text="ดูตัวอย่างใบเสร็จ" />
             <Label layoutX="14.0" layoutY="102.0" text="บันทึกใบเสร็จไปที่">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="billDestDirTf" layoutX="161.0" layoutY="101.0" prefHeight="31.0" prefWidth="246.0" />
-            <Button layoutX="433.0" layoutY="101.0" mnemonicParsing="false" text="เลือกปลายทาง" />
+            <TextField fx:id="saveBillDestinationTf" layoutX="161.0" layoutY="101.0" prefHeight="31.0" prefWidth="246.0" />
+            <Button fx:id="selectBillDestinationBtn" layoutX="433.0" layoutY="101.0" mnemonicParsing="false" text="เลือกปลายทาง" />
             <Label layoutX="620.0" layoutY="14.0" text="ราคา">
                <font>
                   <Font size="20.0" />
@@ -74,7 +70,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <RadioButton id="discountByAmountRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" style="-fx-padding: 0;" text="หน่วยบาท">
+            <RadioButton id="discountByAmountRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" onAction="#setDiscountByBath" style="-fx-padding: 0;" text="หน่วยบาท">
                <font>
                   <Font size="20.0" />
                </font>
@@ -82,13 +78,13 @@
                   <ToggleGroup fx:id="discountRG" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton id="discountByPercentRb" layoutX="697.0" layoutY="94.0" mnemonicParsing="false" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
+            <RadioButton id="discountByPercentRb" layoutX="697.0" layoutY="94.0" mnemonicParsing="false" onAction="#setDiscountByPercent" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" />
             <Label layoutX="908.0" layoutY="92.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -99,7 +95,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="vatTf" layoutX="808.0" layoutY="136.0" prefHeight="31.0" prefWidth="83.0" text="7" />
+            <TextField fx:id="vatTf" layoutX="808.0" layoutY="136.0" prefHeight="31.0" prefWidth="83.0" text="7" />
             <Label layoutX="908.0" layoutY="136.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -115,18 +111,18 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#sellItem" prefWidth="150.0" text="ตกลง" />
-            <Button layoutX="189.0" layoutY="176.0" mnemonicParsing="false" prefWidth="150.0" text="ยกเลิก" />
+            <Button fx:id="okBtn" layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#sellItem" prefWidth="150.0" text="ตกลง" />
+            <Button fx:id="cancelBtn" layoutX="189.0" layoutY="176.0" mnemonicParsing="false" prefWidth="150.0" text="ยกเลิก" />
             <Label layoutX="1132.0" layoutY="14.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" fx:id="discountByAmountBahtTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
             <Label layoutX="1132.0" layoutY="55.0" text="บาท">
                <font>
                   <Font size="20.0" />
