--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -21,7 +21,7 @@
             </Label>
             <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
             <TextField fx:id="billIdTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
-            <TextField fx:id="bilDateTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="billDateTf" editable="false" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
             <Label layoutX="14.0" layoutY="45.0" text="เลขที่ออกเอกสาร">
                <font>
                   <Font size="20.0" />
@@ -36,12 +36,13 @@
       </Pane>
       <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="1200.0">
         <columns>
-          <TableColumn fx:id="itemIdTc" prefWidth="167.0" text="รหัสสินค้า" />
-          <TableColumn fx:id="itemNameTc" prefWidth="178.0" text="ชื่อสินค้า" />
-            <TableColumn fx:id="buyPriceTc" prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
-            <TableColumn fx:id="sellPriceTc" prefWidth="241.0" text="ราคาขาย / หน่วย" />
-            <TableColumn fx:id="sellAmountTc" prefWidth="168.0" text="จำนวน" />
-            <TableColumn fx:id="itemTotalPriceTc" prefWidth="237.0" text="รวม ( บาท )" />
+            <TableColumn fx:id="imageTc" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="รูป" />
+          <TableColumn fx:id="itemIdTc" prefWidth="183.0" text="รหัสสินค้า" />
+          <TableColumn fx:id="itemNameTc" prefWidth="287.0" text="ชื่อสินค้า" />
+            <TableColumn fx:id="buyPriceTc" prefWidth="129.0" text="ราคาซื้อ / หน่วย" />
+            <TableColumn fx:id="sellPriceTc" prefWidth="170.0" text="ราคาขาย / หน่วย" />
+            <TableColumn fx:id="sellAmountTc" minWidth="0.0" prefWidth="133.0" text="จำนวน" />
+            <TableColumn fx:id="itemTotalPriceTc" prefWidth="197.0" text="รวม ( บาท )" />
         </columns>
       </TableView>
       <Pane prefHeight="233.0" prefWidth="1200.0">
@@ -58,8 +59,8 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="saveBillDestinationTf" layoutX="161.0" layoutY="101.0" prefHeight="31.0" prefWidth="246.0" />
-            <Button fx:id="selectBillDestinationBtn" layoutX="433.0" layoutY="101.0" mnemonicParsing="false" text="เลือกปลายทาง" />
+            <TextField fx:id="saveBillDestinationTf" editable="false" layoutX="161.0" layoutY="101.0" prefHeight="31.0" prefWidth="246.0" />
+            <Button fx:id="selectBillDestinationBtn" layoutX="433.0" layoutY="101.0" mnemonicParsing="false" onAction="#pickDirectory" text="เลือกปลายทาง" />
             <Label layoutX="620.0" layoutY="14.0" text="ราคา">
                <font>
                   <Font size="20.0" />
@@ -70,7 +71,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <RadioButton id="discountByAmountRb" fx:id="discountByBathRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" onAction="#setDiscountByBath" style="-fx-padding: 0;" text="หน่วยบาท">
+            <RadioButton id="discountByAmountRb" fx:id="discountByBahtRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" onAction="#setDiscountByBath" style="-fx-padding: 0;" text="หน่วยบาท">
                <font>
                   <Font size="20.0" />
                </font>
@@ -83,8 +84,8 @@
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" />
+            <TextField fx:id="discountByBahtTf" layoutX="980.0" layoutY="52.0" onKeyPressed="#validateDiscountByBahtTextField" prefHeight="31.0" prefWidth="128.0" text="0.0" />
+            <TextField fx:id="discountByPercentTf" layoutX="808.0" layoutY="93.0" onKeyPressed="#validateDiscountByPercentTextField" prefHeight="31.0" prefWidth="83.0" text="0" />
             <Label layoutX="908.0" layoutY="92.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -95,7 +96,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="vatTf" layoutX="808.0" layoutY="136.0" prefHeight="31.0" prefWidth="83.0" text="7" />
+            <TextField fx:id="vatTf" layoutX="808.0" layoutY="136.0" onKeyPressed="#validateVatTextField" prefHeight="31.0" prefWidth="83.0" text="7" />
             <Label layoutX="908.0" layoutY="136.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -111,18 +112,18 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button fx:id="okBtn" layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#sellItem" prefWidth="150.0" text="ตกลง" />
-            <Button fx:id="cancelBtn" layoutX="189.0" layoutY="176.0" mnemonicParsing="false" prefWidth="150.0" text="ยกเลิก" />
+            <Button fx:id="okBtn" layoutX="14.0" layoutY="177.0" mnemonicParsing="false" onAction="#validateInput" prefHeight="31.0" prefWidth="217.0" text="ตกลง" />
+            <Button fx:id="cancelBtn" layoutX="433.0" layoutY="176.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="31.0" prefWidth="101.0" text="ล้าง" />
             <Label layoutX="1132.0" layoutY="14.0" text="บาท">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="discountByPercentBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="vattBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="profitTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" fx:id="netPriceTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="priceTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByPercentBahtTf" editable="false" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" text="0.0" />
+            <TextField fx:id="vatBahtTf" editable="false" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="profitTf" editable="false" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" fx:id="netPriceTf" editable="false" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="priceTf" editable="false" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
             <Label layoutX="1132.0" layoutY="55.0" text="บาท">
                <font>
                   <Font size="20.0" />
