--- a/src/customer.fxml
+++ b/src/customer.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox fx:controller="FXMLController.CustomerController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController.CustomerController">
    <children>
       <Pane prefHeight="80.0">
          <children>
@@ -17,16 +17,16 @@
                </font>
             </Label>
             <TextField fx:id="customerNameTf" layoutX="180.0" layoutY="25.0" prefHeight="31.0" prefWidth="311.0" />
-            <Button fx:id="searchbtn" layoutX="526.0" layoutY="25.0" mnemonicParsing="false" onAction="#searchCustomer" prefHeight="31.0" prefWidth="102.0" text="ค้นหา" />
+            <Button fx:id="searchBtn" layoutX="526.0" layoutY="25.0" mnemonicParsing="false" onAction="#searchCustomer" prefHeight="31.0" prefWidth="102.0" text="ค้นหา" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Pane>
-      <TableView prefHeight="640.0" prefWidth="1200.0">
+      <TableView fx:id="table" prefHeight="640.0" prefWidth="1200.0">
         <columns>
           <TableColumn fx:id="customerNameTc" prefWidth="242.0" text="ชื่อลูกค้า/บริษัท" />
-            <TableColumn fx:id="buyCountTc" prefWidth="134.0" text="จำนวนการซื้อ(ครั้ง)" />
+            <TableColumn fx:id="buyAmountTc" prefWidth="134.0" text="จำนวนการซื้อ(ครั้ง)" />
             <TableColumn fx:id="lastestBuyDateTc" prefWidth="224.0" text="การซื้อครั้งล่าสุด" />
             <TableColumn fx:id="totalBuyTc" prefWidth="138.0" text="ยอดซื้อ(บาท)" />
             <TableColumn fx:id="totalProfitTc" prefWidth="130.0" text="กำไร(บาท)" />
