--- a/src/alBill.fxml
+++ b/src/alBill.fxml
@@ -7,28 +7,58 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1200.0" style="-fx-background-color: f4e7e7;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLController.BillsController">
    <children>
-      <HBox prefHeight="80.0" prefWidth="484.0" spacing="50.0">
+      <HBox prefHeight="80.0" prefWidth="1200.0" spacing="5.0">
          <children>
-            <Label text="วันที่">
+            <Label text="เลขที่เอกสาร">
                <font>
                   <Font size="20.0" />
                </font>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
             </Label>
-            <ComboBox id="dateCb" prefWidth="150.0" />
+            <TextField fx:id="billIdTf" />
+            <Label text="วันที่ออกเอกสาร">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="billDateTf" />
+            <Label text="ชื่อลูกค้า">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="customerNameTf" />
+            <Button fx:id="searchBtn" mnemonicParsing="false" onAction="#searchData" prefHeight="31.0" prefWidth="126.0" text="ค้นหา">
+               <HBox.margin>
+                  <Insets left="40.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="clearBtn" mnemonicParsing="false" onAction="#clearInput" prefHeight="31.0" prefWidth="70.0" text="ล้าง">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin></Button>
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </HBox>
-      <TableView layoutY="80.0" prefHeight="640.0" prefWidth="1200.0">
+      <TableView fx:id="table" layoutY="80.0" prefHeight="640.0" prefWidth="1200.0">
         <columns>
-          <TableColumn id="taxidTc" prefWidth="146.0" text="เลขที่เอกสาร" />
-          <TableColumn id="dateTc" prefWidth="224.0" text="วันที่ออกเอกสาร" />
-            <TableColumn id="customerTc" prefWidth="523.0" text="ผู้ซื้อ" />
-            <TableColumn id="infoCm" prefWidth="217.0" text="หมายเหตุ" />
-            <TableColumn id="printTc" prefWidth="59.0" text="Print" />
+          <TableColumn id="taxidTc" fx:id="billIdTc" prefWidth="174.0" text="เลขที่เอกสาร" />
+          <TableColumn id="dateTc" fx:id="billDateTc" prefWidth="196.0" text="วันที่ออกเอกสาร" />
+            <TableColumn id="customerTc" fx:id="customerNameTc" prefWidth="368.0" text="ลูกค้า" />
+            <TableColumn id="infoCm" fx:id="noteTc" prefWidth="372.0" text="หมายเหตุ" />
+            <TableColumn id="printTc" fx:id="printTc" prefWidth="89.0" text="Print" />
         </columns>
       </TableView>
    </children>
