--- a/src/stat.fxml
+++ b/src/stat.fxml
@@ -45,6 +45,11 @@
                </padding>
             </Label>
             <ComboBox fx:id="itemNameCb" minHeight="30.0" onAction="#onItemNameChange" prefHeight="30.0" prefWidth="203.0" />
+            <Button fx:id="reloadBtn" mnemonicParsing="false" onAction="#reloadData" prefHeight="31.0" prefWidth="106.0" text="โหลดใหม่">
+               <HBox.margin>
+                  <Insets left="80.0" />
+               </HBox.margin>
+            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
